<resources>
    <string name="app_name">Novigrad</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_register">Don\'t have an account? Register</string>
    <string name="prompt_login">Already have an account? Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="logout">logout</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="employee_radio">Employee</string>
    <string name="customer_radio">Customer</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loading">Loading</string>
    <string name="start">Start</string>
    <string name="error_loading_document">Error: could not load the requested document</string>
    <string name="welcome_msg">Welcome %1$s! \nYou are logged in as %2$s</string>
    <string name="manage_user">Users</string>

    <string name="manage_services">Services</string>
    <string name="add_service_button">Add Service</string>
    <string name="service_editor">Service Editor</string>
    <string name="service_name">Service Name</string>
    <string name="service_price">Service Price</string>
    <string name="required_documents">Required Documents:</string>
    <string name="drivers_license">Driver\'s License</string>
    <string name="health_card">Health Card</string>
    <string name="photo_id">Photo ID</string>
    <string name="save_service_button">Save Service</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_phone">Edit Phone number</string>
    <string name="edit_offered_services">Edit Services</string>
    <string name="edit_address">Edit Address</string>
    <string name="street_number">Street #</string>
    <string name="street_name">Street Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="municipality">Municipality</string>
    <string name="phone">Phone Number</string>
    <string name="save_profile">Save Profile</string>

    <string name="address">Address</string>
    <string name="residence">Residence</string>
    <string name="license">License</string>
    <string name="photoID">Photo ID</string>
    <string name="citizenship">Citizenship</string>

    <string name="profile_save_success">Successfully saved profile...</string>
    <string name="profile_save_failed">Failed to save profile. Try again.</string>

    <string name="alphabetical">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphanumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="customer_dob_title">Date of Birth</string>
    <string name="license_g">G</string>
    <string name="license_g1">G1</string>
    <string name="license_g2">G2</string>
    <string name="submit_service_request">Submit Service Request</string>
    <string name="service_req_service_sel">Select a Service</string>
    <string name="service_req_address_title">Address</string>
    <string name="photo_id_prompt">Please insert a photo of yourself</string>
    <string name="citizenship_prompt">Please insert a photo of your permanent resident card or passport</string>
    <string name="residence_prompt">Please insert a photo of proof of residence below</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="review">Review</string>

    <string name="leave_rating">Leave a Rating</string>
    <string name="leave_comment">Leave a Comment</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="comment_success">Successfully submitted comment</string>
    <string name="comment_failure">Failed to submit comment</string>

    <string name="current_rating">Current Rating</string>
    <string name="view_comments">View Comments</string>
</resources>