<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employee.RequestViewerActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firstNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_hint"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/lastNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_hint"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>