<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".customer.BranchActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
            <TextView
                    android:id="@+id/branchServReqMunicipalityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ottawa"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:layout_weight="1" />

            <TextView
                    android:id="@+id/branchServReqEmailPhoneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="email@email.com, 613-999-9999"
                    android:textColor="#555"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_weight="1" />

            <TextView
                    android:id="@+id/branchServReqAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="999 Street name (A1A1A1)"
                    android:textColor="#555"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_weight="1" />

            <TextView
                    android:id="@+id/branchServReqTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="8:00am - 4:30pm"
                    android:textColor="#555"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1" />

            <TextView
                    android:id="@+id/branchServReqDaysTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select a service:"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serviceSelectSpinner"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="wrap_content"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/ServiceCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$cost"/>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:layout_margin="10dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/ServiceRequestFormLayout"
                android:padding="20dp">
                <TextView
                        android:text="@string/submit_service_request"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ServiceRequestTitle"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-medium"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                        android:layout_marginBottom="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/CustomerFirstNameInput">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/CustomerLastNameInput"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name_hint"
                            android:layout_weight="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:text="@string/service_req_address_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/serviceReqAddressText"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginTop="20dp" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/AddressEditLayout"
                        android:layout_marginBottom="20dp">

                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/editCustStreetNum"
                            android:layout_weight="1"
                            android:hint="@string/street_number" />

                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editCustStreetName"
                            android:layout_weight="1"
                            android:digits="@string/alphabetical"
                            android:hint="@string/street_name" />

                </LinearLayout>

                <TextView
                        android:text="@string/customer_dob_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/CustomerDOBTitle"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <DatePicker
                    android:id="@+id/CustomerDOBDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:layout_marginBottom="20dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/LicenseDoc"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/residence_prompt" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@drawable/ic_launcher_foreground"
                        android:id="@+id/residenceImageView"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_camera" />

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/LicenseFormLayout"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/licenseTitle"
                        android:text="@string/license"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                    <RadioGroup
                        android:id="@+id/LicenseRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/LicenseG"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/license_g"/>
                        <RadioButton
                            android:id="@+id/LicenseG2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/license_g2"/>
                        <RadioButton
                            android:id="@+id/LicenseG1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/license_g1"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/HealthCardFormLayout"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/citizenshipPromptText"
                            android:layout_weight="1"
                            android:text="@string/citizenship_prompt"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@android:drawable/ic_menu_camera"
                            android:id="@+id/citizenshipImageView"
                            android:layout_weight="1"
                            tools:srcCompat="@drawable/ic_launcher_foreground" />
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/PhotoIDLayout"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/photoIDPromptTextView"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/photo_id_prompt" />

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:srcCompat="@drawable/ic_launcher_foreground"
                            android:id="@+id/photoIDImageView"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_menu_camera" />
                </LinearLayout>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/custSubmitServReqBtn"
                        android:layout_weight="1"
                        android:text="@string/submit_service_request"
                        android:onClick="onSubmit" />
            </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>